<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">
    <!--头像与姓名-->
    <LinearLayout
        android:id="@+id/detail_content_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/detail_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/man" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/test_text"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--电话号码与信息-->
    <LinearLayout
        android:id="@+id/detail_phone_and_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <TextView
                android:id="@+id/detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/test_phone"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:gravity="end">

                <Button
                    android:id="@+id/detail_phone_picture"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone"
                    android:contentDescription="@string/phone"
                    android:foreground="?selectableItemBackground" />

                <Button
                    android:id="@+id/detail_massage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/message"
                    android:contentDescription="@string/massage"
                    android:foreground="?selectableItemBackground" />
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
    <!--性别-->
    <LinearLayout
        android:id="@+id/detail_gender_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/detail_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/test_gender_text"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!--描述-->
    <LinearLayout
        android:id="@+id/detail_remake_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/detail_remake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/test_remake_text"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!--底部菜单-->
    <LinearLayout
        android:id="@+id/detail_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/back_button_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/delete_button_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/detail_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/modification_button_text"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>