<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/app_name"
        android:titleTextColor="#6A6A6A" />

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/search_edit_bg"
            android:drawableStart="@drawable/search"
            android:hint="@string/search_for_prompts"

            android:inputType="text"
            android:padding="9dp" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:background="@color/black"
            android:text="@string/search" />
    </RelativeLayout>


    <ListView
        android:id="@+id/book_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_layout"
        android:divider="#00000000" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        app:backgroundTint="#8FCBEC"
        app:elevation="0dp"
        app:srcCompat="@drawable/add" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"
        app:labelVisibilityMode="labeled">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>